--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -1464,10 +1464,10 @@
         <script src="/web/js/app-logs.js"></script>
 
         <!-- 治具資料 API -->
-        <script src="js/api-fixtures.js"></script>
+        <script src="js/api/api-fixtures.js"></script>
 
         <!-- 機種資料 API -->
-        <script src="js/api-models.js"></script>
+        <script src="js/api/api-machine-models.js"></script>
 
         <!-- ================================ -->
         <!-- 🏠 主控制（頁面切換/初始化）       -->
